# CppBuildUnifier

./: CMakeLists.txt  LICENSE.txt  README.md  README_zh.md
CppBuildUnifier.xcodeproj/: project.pbxproj
CppBuildUnifier.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
android_mk_unifier/: Android.mk.cpp  Android.mk.h  DebugUtil.h  main.cpp
android_mk_unifier/nom/: LICENSE  Makefile  README.md  nom.sh  prelude.mk
android_mk_unifier/nom/apps/: builtin.cpp  lexer.cpp  nom.cpp  parser.cpp  semantics.cpp
android_mk_unifier/nom/not/: not.h
android_mk_unifier/nom/src/: error.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  semantics.cpp  semantics.hpp  utils.hpp
android_mk_unifier/nom/src/builtin/: abspath.cpp  addfix.cpp  android_all_makefiles.cpp  android_all_under.cpp  android_my_dir.cpp  android_path_for.cpp  eval.cpp  filter.cpp  findstring.cpp  foreach.cpp  patsubst.cpp  print.cpp  shell.cpp  strip.cpp  subst.cpp  wildcard.cpp  words.cpp
shared/: SSources.cpp  SSources.h  SharedMacros.h  file_utils.h  str_utils.h
shared/utils/: Path.h  StrBuf.h
xcodeproj_unifier/: SXcodeSources.h  TODO.txt  UnifiedXcodeProject.cpp  UnifiedXcodeProject.hpp  XcodeProjUnifier.cpp  XcodeProjUnifier.hpp  main.cpp
xcodeproj_unifier/xcodeproj/: NeXTSTEP_plist.cpp  NeXTSTEP_plist.hpp  namehash.cpp  namehash.h  pbxproj_parser.cpp  pbxproj_parser.hpp  readme.md
